# eth-protocol-expert

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DATA-SOURCE-EXTRACTION-CHECKLIST.md  Dockerfile.api  IMPLEMENTATION_PLAN.md  PLAN-SOTA-UPGRADES-FEEDBACK.md  PLAN-SOTA-UPGRADES.md  PLAN-continuous-ingestion.md  PLAN-extended-corpus.md  PLAN-falkordb-integration.md  PLAN-llamaindex-github.md  PLAN-raw-content-cache.md  PLAN.md  PROMPT.md  README.md  SPEC.md  UNIFIED_ROADMAP.md  UNIFIED_ROADMAP_RALPH.md  UNIFIED_ROADMAP_V2.md  docker-compose.yml  index.html  justfile  pyproject.toml
.claude/: ralph-loop.local.md
.claude/rules/: CLAUDE.md
app/: DESIGN.md  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  index.css
data/: sync_state.json
data/eval/: metrics_20260121_135305.json
docs/: API.md  ARCHITECTURE.md  CHUNKING_EMBEDDING_UPGRADE_PLAN.md  CONCEPTS.md  GETTING_STARTED.md  INGESTION.md  QUERIES.md  README.md
scripts/: CLAUDE.md  cache_cli.py  continuous_ingestion.py  demo_e2e.py  ingest_acd_transcripts.py  ingest_all.py  ingest_all_clients.sh  ingest_arxiv.py  ingest_beacon_apis.py  ingest_builder_specs.py  ingest_client.py  ingest_clients.py  ingest_consensus_specs.py  ingest_devp2p.py  ingest_eips.py  ingest_ercs.py  ingest_ethresearch.py  ingest_execution_apis.py  ingest_execution_specs.py  ingest_github_issues.py  ingest_magicians.py  ingest_portal_specs.py  ingest_research.py  ingest_rips.py  query_cli.py  sync_ethresearch.py  test_e2e.py  test_full_rag.py  validate_corpus.py
src/: CLAUDE.md  __init__.py  config.py
src/agents/: CLAUDE.md  __init__.py  backtrack.py  budget_enforcer.py  query_analyzer.py  react_agent.py  reflection.py  retrieval_tool.py
src/api/: CLAUDE.md  main.py
tests/: __init__.py  conftest.py  test_chunkers.py  test_eip_parser.py  test_evidence.py  test_phase3_hybrid_search.py  test_phase4_graph.py  test_phase5_decomposition.py  test_phase6_forums.py
(+128 files in other folders)
